2002-05-13  Vince Darley  <vincentdarley@users.sourceforge.net>

	* generic/tclEvent.c: 
	* generic/tclIOUtil.c:
	* generic/tclInt.h: clean up all memory allocated by the
	filesystem, via introduction of 'TclFinalizeFilesystem'.
	Fix bad comment also.  [Fixes 555078 and 'fs' part of 543549]
	* win/tclWinChan.c: fix comment referring to wrong function.
	
2002-05-10  Don Porter  <dgp@users.sourceforge.net>

	* tests/load.test:
	* tests/safe.test:
	* tests/tcltest.test: Corrected some list-quoting issues and
	other matters that cause tests to fail when the patch includes
	special characters.  Report from Vince Darley.  [Bug 554068].

2002-05-08    David Gravereaux <davygrvy@pobox.com>

	* doc/file.n:
	* tools/man2tcl.c:
	* tools/man2help2.tcl:  Thanks to Peter Spjuth
	<peter.spjuth@space.se>, again.  My prior fix for
	single-quote macro mis-understanding was wrong.	 Reverted to
	reimpliment the 'macro2' proc which handles single-quote macros
	and restored file.n text arrangement to avoid single-quotes on
	the first line.  Sorry for all the confusion.

2002-05-08  David Gravereaux <davygrvy@pobox.com>

	* tools/man2tcl.c:
	* tools/man2help2.tcl: Proper source of macro error mis-
	understanding single-quote as the leading macro command found
	and repaired.

	* doc/file.n: Reverted to prior state before I messed with
	it.

2002-05-08  Don Porter  <dgp@users.sourceforge.net>

	* library/tcltest/tcltest.tcl: Corrected [uplevel] quoting when
	[source]-ing test script in subdirectories.
	* tests/fileName.test:
	* tests/load.test:
	* tests/main.test:
	* tests/tcltest.test: 
	* tests/unixInit.test: Fixes to test suite when there's a space
	in the working path.  Thanks to Kevin Kenny.

2002-05-07  David Gravereaux <davygrvy@pobox.com>

	-- Changes from Peter Spjuth <peter.spjuth@space.se>
	* tools/man2tcl.c: Increased line buffer size and a bail-out if
	that should ever be over-run.
	* tools/man2help.tcl: Include Courier New font in rtf header.